--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Beatware - 2023</title>
+    <title>Project Exotic</title>
 
     <link href="assets/css/imports.css" rel="stylesheet">
 
@@ -63,7 +63,7 @@
 
     <div class="header">
         <div class="brand">
-            <h1>Beatware&trade;</h1>
+            <h1>Exotic&trade;</h1>
         </div>
         <nav class="nav">
             <a href="index.html" class="nav-link wide">Home</a>
@@ -88,14 +88,13 @@
             <div class="col-md-6" data-aos="fade-right" data-aos-duration="2200">
                 <div class="left">
                     <div class="box-welcome">
-                        <span>Beatware (./9QbaDMy5gx) </span>
+                        <span>Project Exotic</span>
                     </div>
                     <div class="content">
-                        <h1 class="mb-3">Welcome to Beatware.xyz<span class="red">!</span></h1>
+                        <h1 class="mb-3">Welcome to Exotic!<span class="red">!</span></h1>
                         <div class="paragraph">
                             <p class="mb-5"></p>
-                            <p class="mb-5"> - Created by "injectedisudd" & ".notvertical" !</p>				
-                            <p class="mb-5"> - Our Vanity Invite got stolen, Please only use Discord invites from our Website & Telegram !</p>					
+                            <p class="mb-5"> - Created by Husky & Angel.</p>								
 							
                         </div>
                     </div>
