--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         <span>Project Exotic</span>
                     </div>
                     <div class="content">
-                        <h1 class="mb-3">Welcome to Exotic!<span class="red">!</span></h1>
+                        <h1 class="mb-3">Welcome to Exotic<span class="red">!</span></h1>
                         <div class="paragraph">
                             <p class="mb-5"></p>
                             <p class="mb-5"> - Created by Husky & Angel.</p>								
