--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     <div class="header">
         <div class="brand">
-            <h1>Exotic&trade;</h1>
+            <h1>Project Exotic</h1>
         </div>
         <nav class="nav">
             <a href="index.html" class="nav-link wide">Home</a>
