--- a/index.html
+++ b/index.html
@@ -543,9 +543,9 @@
             <div class="col-lg-4 col-md-6 col-xs-12 col-sm-10">
                 <div class="services-item1 text-center">
                     <h4>Owner</h4>
-                    <p> injected#5001 & .vrtcl
+                    <p> Husky & Angel
                     </p>
-
+                    <h4> </h4>
 
                 </div>
             </div>
