--- a/store.html
+++ b/store.html
@@ -13,7 +13,7 @@
     <script src="assets/js/scroll.html"></script>
     <script defer="" src="assets/js/main.html"></script>
     <script defer="" src="assets/js/cheats.html"></script>
-    <title>BeatWare™ - Store</title>
+    <title>Project Exotic</title>
     <title>Document</title>
 </head>
 
@@ -24,13 +24,13 @@
 
             <div class="header">
                 <div class="brand">
-                    <h1>Beatware&trade;</h1>
+                    <h1>Project Exotic</h1>
                 </div>
                 <nav class="nav">
                     <a href="index.html">Home</a>
                     <a href="store.html" class="nav-link wide">Store</a>
  
-                    <a href="https://discord.gg/7KdswG9tfF" target="_blank">Discord</a>
+                    <a href="https://discord.gg/3GJjE6nWbN" target="_blank">Discord</a>
                 </nav>
             </div>
 
