--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
         </div>
         <nav class="nav">
             <a href="index.html" class="nav-link wide">Home</a>
-            <a href="store.html" target="_blank">Store</a>
-            <a href="https://discord.gg/7KdswG9tfF" target="_blank">Discord</a>
+            <a href="store.html" Store</a>
+            <a href="https://discord.gg/3GJjE6nWbN" target="_blank">Discord</a>
 			
         </nav>
     </div>
