--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         </div>
                     </div>
 
-                    <a href="https://discord.gg/7KdswG9tfF" class="button">Join us</a>
+                    <a href="https://discord.gg/7KdswG9tfF" class="button" target="_blank">Join us</a>
                 </div>
             </div>
 
