--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <link href="assets/css/aos.css" rel="stylesheet">
 
     <link rel="stylesheet" href="assets/css/font.css" />
-    <link rel="icon" type="image/x-icon" href="assets/img/icon.ico">
+    <link rel="icon" type="image/x-icon" href="assets/img/icon.png">
 
     <script src="assets/js/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
